<resources>
    <string name="app_name">Car Trackers</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>

    <string name="ready_lets_go">Ready?\nLet\'s Go</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="upgrade">Upgrade</string>
    <string name="your">your</string>
    <string name="security_system">car security with</string>
    <string name="internet_problem">Internet Problem</string>
    <string name="would_you_like_to_use_offline">Would you like to use offline?</string>
    <string name="country">Select your Country</string>
    <string name="select_country">Country</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>

    <string name="alt_feed">image feed</string>
    <string name="more_options">more options</string>
    <string name="home">Home</string>
    <string name="my_inbox">inbox</string>
    <string name="profile">profile</string>
    <string name="title">CarTrack</string>
    <string name="all">All user</string>
    <string name="car_list">Vehicles</string>
    <string name="search">Search</string>
    <string name="alt_back_button">back button</string>
    <string name="my_network">Friend\'s List</string>
    <string name="manage_subscription">Manager Subscription</string>
    <string name="charge_history">Charge History</string>
    <string name="edit_my_details">Edit My Details</string>
    <string name="payments">Payment</string>
    <string name="logout">Logout</string>
    <string name="become_an_influencer">Other Details</string>
    <string name="following">Following</string>
    <string name="vip_list">Vip</string>
    <string name="zero">0</string>
    <string name="vello_ready">Ready</string>
    <string name="vello_sent">Sent</string>
    <string name="questions_available">Available</string>
    <string name="friends_list">Friend\'s List</string>
    <string name="email">Email Address:</string>
    <string name="reply">Reply</string>
    <string name="manage">manage</string>
    <string name="login">Please Sign-in</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="welcome_back">Please sign-in</string>
    <string name="password_time">Credential</string>
    <string name="no_account">Sign-up</string>
    <string name="s_email_address">email address</string>
    <string name="s_password">password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name_label">Complete Name:</string>
    <string name="bio_label">Street Address:</string>
    <string name="suite">Suite Address:</string>
    <string name="save_changes">Save Changes</string>
    <string name="cover_photo_desc">Vertical photos work best. Min. recommended size: 600 X 900px</string>
    <string name="cover_photo_label">Cover Photo</string>
    <string name="camera_icon">icon_camera</string>
    <string name="photo_cover">icon_cover</string>
    <string name="city_address">City Address:</string>
    <string name="zip_code">Zip Code:</string>
    <string name="phone_no">Phone No:</string>
    <string name="website">Website:</string>
    <string name="company_name">Company Name:</string>
    <string name="catch_phrases">Catch Phrase:</string>
    <string name="bs_label">BS:</string>
    <string name="username">Username:</string>
    <string name="new_user">New Account</string>
    <string name="register">Register</string>
    <string name="suggestions">Suggestion</string>
    <string name="results">Results</string>
    <string name="unfollow">unfollow</string>
    <string name="dropped_pin">dropIn</string>
    <string name="see_all">See All</string>
    <string name="top_categories">Top Categories</string>
    <string name="this_week">This Week</string>
    <string name="best_selling">Most Popular</string>
    <string name="todays_trending">Todays Movie</string>
    <string name="track_date">Showing</string>
    <string name="track_name">Track Name:</string>
    <string name="item_image_movie">Item Image Movies</string>
    <string name="movie_title">James Bond: For your eyes only</string>
    <string name="content_item_horizontal">Item movie horizontal</string>
    <string name="best_movie">Best Movie</string>
    <string name="search_movie_content">search movie content</string>
    <string name="up_coming">Up Coming</string>
    <string name="no_results">No Results</string>
    <string name="rating_65">6.5</string>
    <string name="date_release">1986-08-08</string>
    <string name="story">Story</string>
</resources>
